# RayTracer

./: CMakeLists.txt  main.cpp  out.ppm  readme
src/: CMakeLists.txt  Color.cpp  Color.h  Cube.cpp  Cube.h  Functions.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/math/: CMakeLists.txt  Vector.cpp  Vector.h
tests/: CMakeLists.txt  ray_tests.cpp
tests/math/: CMakeLists.txt  math_tests.cpp
